# whisper.cpp-realtime-app

./: CMakeLists.txt
.github/workflows/: build.yml
src_app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  waveformwidget.cpp  waveformwidget.h  whisperrecognizer.cpp  whisperrecognizer.h
